--- a/src/client/App.css
+++ b/src/client/App.css
@@ -1,3 +1,39 @@
 * {
     box-sizing: border-box;
 }
+
+
+.meals-order{
+    padding:1rem;
+    width:30rem;
+    box-shadow:  10px 5px 5px rgba(6,7,9, 0.6);
+    border-radius: 10px;
+} 
+
+.meal-image{
+    width:250px;
+    height:150px;
+}
+
+.card-wrap{
+    display:flex;
+    flex-direction: row;
+    justify-content: space-around;
+    flex-wrap: wrap;
+    gap:20px;
+    width:100vw;
+    background-color: #E8CED8;
+   padding:30px;
+   padding-top:150px;
+}
+
+.card-button{
+    background-color:black;
+    border:black 1px solid;
+}
+
+.card-button:hover{
+    background-color:#E8CED8;
+    color:black; 
+    border:black 1px solid;
+}
