--- a/src/client/index.css
+++ b/src/client/index.css
@@ -6,28 +6,27 @@
 }
 
 #root {
-  padding-left: 30%;
-  padding-right: 30%;
-  height: 100vh;
+   padding-right: 30%;
+  height: 100vh; 
 }
 
-body {
+/* body {
   margin: 0;
   font-size: 17px;
-}
+} */
 
-ul {
+/* ul {
   list-style: none;
   padding: 0;
   margin: 0;
-}
+} */
 
-a {
+/* a {
   text-decoration: none;
   color: #2d3233;
-}
+} */
 
-button {
+/* button {
   background-color: #3e99c0;
   border-radius: 8px;
   border-width: 0px;
@@ -35,18 +34,7 @@ button {
   color: rgb(255, 255, 255);
   padding: 5px;
   font-size: 17px;
-}
+} */
 
-@media screen and (max-width: 1400px) {
-  #root {
-    padding-left: 30%;
-    padding-right: 30%;
-  }
-}
+ 
 
-@media screen and (max-width: 750px) {
-  #root {
-    padding-left: 0;
-    padding-right: 0;
-  }
-}
