--- a/src/client/Home.css
+++ b/src/client/Home.css
@@ -9,110 +9,45 @@ body{
     line-height:1.4;
 }
 
-.navBar{
-    width:100vw;
-    background-color: black;
-    z-index: 1;
-    position:fixed;
-    height:15%;
-}
-
-/* .navBar{
-    margin:auto;
-       background-color: #000000;
-       color:white;
-       display:flex;
-       flex-direction: row;
-       justify-content: space-evenly;
-       height:20%;
-       font-size: 25px;
-       top: 0;
-       z-index: 1;
-       width:100vw;
-       position:fixed;
-       
-     } */
-
-.navbar-light .navbar-brand{
-    color:#fff;
-    font-family: fantasy;
-    font-size:50px;
-    padding-left:30px;
-}
-
-.navbar-light .navbar-brand:hover{
-    color:#ffc5bf;
-}
-
-.navbar-light .navbar-nav .nav-link{
-    color:#fff;
-    font-size:25px;
-    padding-left:30px;
- 
-   
-}
-
-.navbar-light .navbar-nav {
-   
-    margin-left:60%;
-}
 
 
 
-.navbar-light .navbar-nav .nav-link:hover{
-    color:#E8CED8;
-    color:#ffc5bf;
-}
-
-.navbar-light .navbar-nav .nav-link:before{
-    content: '';
-    display: block;
-    height: 5px;
-    width: 100%;
-    background-color:#ffc5bf;
-    position: absolute;
-    top: 80px;
-    width: 0%;
-    transition: all ease-in-out 230ms;
-    }
-    .navbar-light .navbar-nav .nav-link:hover:before{
-        width: 6%;
-    }
 
 
-  .toggle{
-    background-color:white !important;
-  }
+
 
   
-  .review-wrap{
-     display:flex;
-    justify-content: space-between;
-    align-items: center;
+.review-wrap{
+display:grid;
+grid-template-rows: 500px 500px; 
+  column-gap: 10px;
+  row-gap: 10px;
+  grid-template-columns: repeat(auto-fit, minmax(500px, 4fr));
     width: 100vw;
-    height: 100vh;
-
-  
+    height: 300vh;
+    padding-top:200px;
     background-color: #ffc5bf;
     background-color: #ffd8be; 
   
   }
 
-  .review-wrap h5{
-    width:70%;
-    
-  }
 
-  .review-wrap h2{
-    width:50%;
-    
-  }
 
   .review-list{
-      padding-left: 120px;
+padding-left: 150px;
  
+
      
   }
+
+  .review-list h2{
+   width:60%;   
+     }
+
+  .review-list h5{
+   
+   width:60%;   
+     }
 
 
  
@@ -148,6 +83,12 @@ body{
     margin:80px 100px;
     width:100%;
 
+}
+
+.search-meal{
+    padding-top:200px;
+    text-align: center;
+    width:100vw;
 }
 
 .middle-section{
@@ -190,18 +131,11 @@ color:#fff;
     display:flex;
     flex-direction:row;
     justify-content: space-evenly;
-    align-items: center; 
+    padding-top:50px;
+  
 }
 
-@media screen and (max-width: 996px) {
-    .navbar-light .navbar-nav .nav-link {
-        background-color:black;
-      margin-left:140px;
-    
-  
-       
-    }
-}
+
 
 @media screen and (max-width: 855px) {
    
@@ -217,7 +151,7 @@ color:#fff;
         height:20vh;
     }
 
- 
+  
 
   }
 
@@ -230,16 +164,20 @@ color:#fff;
         top:50%;
     }
 
-    .navbar-light .navbar-brand{
-        font-size: 25px;
-       
-        width:50%;
-    }
+  
 
 
 .middle-image{
     width:50vw;
     height:20vh;
+   
+}
+
+.footer {
+    flex-direction: column;
+    height:80vh;
+   padding-left:30px;
+   margin-top:80px;
 }
 
 
@@ -248,9 +186,5 @@ color:#fff;
 
 
   
-  .search-meal{
-      padding-top:200px;
-      text-align: center;
-      width:100vw;
-  }
+ 
 
