--- a/src/client/Home.css
+++ b/src/client/Home.css
@@ -1,60 +1,43 @@
-*{
+* {
     margin:0;
     padding:0; 
     box-sizing:border-box;
 }
-body{
+body {
     margin: 0 auto; 
     font-family:'Roboto', sans-serif;
     line-height:1.4;
+    background-color: #ffd8be; 
+}
+ 
+.review-wrap {
+    display:grid;
+    grid-template-rows: 350px 350px; 
+    column-gap: 10px;
+    row-gap: 10px;
+    grid-template-columns: repeat(auto-fit, minmax(500px, 1fr));
+    width: 100vw;
+    height: 100vh;
+    padding-top:200px;
+    /* background-color: #ffc5bf; */
+   
+  }
+
+  .review-list {
+   padding-left: 150px;
 }
 
-
-
-
-
-
-
-
-  
-.review-wrap{
-display:grid;
-grid-template-rows: 500px 500px; 
-  column-gap: 10px;
-  row-gap: 10px;
-  grid-template-columns: repeat(auto-fit, minmax(500px, 4fr));
-    width: 100vw;
-    height: 300vh;
-    padding-top:200px;
-    background-color: #ffc5bf;
-    background-color: #ffd8be; 
-  
-  }
-
-
-
-  .review-list{
-padding-left: 150px;
- 
-
-     
-  }
-
-  .review-list h2{
+  .review-list h2 {
    width:60%;   
-     }
+}
 
   .review-list h5{
-   
    width:60%;   
-     }
-
-
- 
+}
 
   .image-container{
       position: relative;
-  }
+}
 
   .image-text{
     position: absolute;
@@ -66,23 +49,20 @@ padding-left: 150px;
     font-weight: 800;
     width:50%;
     height:20%;
- 
-  }
+}
 
   .image{
-    /* background:url("https://fullsuitcase.com/wp-content/uploads/2020/06/Authentic-Italian-food-by-region.jpg") no-repeat center center/cover; */
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
- width:100vw;
-   border: 4px solid #000000;
+    width:100vw;
+    border: 4px solid #000000;
 }
 
 .home-body{
     border:3px solid;
     margin:80px 100px;
     width:100%;
-
 }
 
 .search-meal{
@@ -92,7 +72,6 @@ padding-left: 150px;
 }
 
 .middle-section{
-  
     width:100vw;
     height:120vh;
     margin-bottom: -20px;
@@ -111,35 +90,28 @@ color:#000000;
 }
 
 .middle-image{
-    /* width:30vw; */
     height:50vh;
 }
 
 .footer h3{
     font-weight: 900;
-    padding-bottom: 20px;
-    
+    padding-bottom: 20px; 
 }
 
 .footer{
-    /* background-color:#7da788; */
-    /* background-color:#a8c66c; */
-background-color: #000000;
-color:#fff;
+    background-color: #000000;
+    color:#fff;
     width:100vw;
     height:40vh;
     display:flex;
     flex-direction:row;
     justify-content: space-evenly;
-    padding-top:50px;
-  
+    padding-top:50px; 
 }
 
 
 
 @media screen and (max-width: 855px) {
-   
-
     .title{
         font-size: 25px;
         margin-left:100px;
@@ -150,9 +122,6 @@ color:#fff;
         width:30vw;
         height:20vh;
     }
-
-  
-
   }
 
 
@@ -162,15 +131,11 @@ color:#fff;
     .image-text{
         font-size:25px;
         top:50%;
-    }
-
-  
-
+}
 
 .middle-image{
     width:50vw;
-    height:20vh;
-   
+    height:20vh; 
 }
 
 .footer {
@@ -179,10 +144,7 @@ color:#fff;
    padding-left:30px;
    margin-top:80px;
 }
-
-
-
-  }
+}
 
 
   
